# bloomberg-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/bloomberg-cli/: SKILL.md
skills/bloomberg-cli/agents/: openai.yaml
skills/bloomberg-cli/references/: commands.md
src/bloomberg_cli/: __init__.py  bql_cli.py  cli.py  compat.py  surface.py  workflows.py
tests/: test_bql_cli.py  test_cli.py
