[project]
name = "bloomberg-cli"
version = "0.1.0"
description = "Fast, JSON-first Bloomberg Terminal CLI powered by xbbg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2,<3",
    "xbbg[pandas]>=1.2.6,<2",
    "blpapi>=3.24",
]

[project.scripts]
bloomberg = "bloomberg_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bloomberg_cli"]

[tool.uv.sources]
blpapi = { index = "bloomberg" }

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
